--- a/index.html
+++ b/index.html
@@ -91,63 +91,6 @@
           </a>
         </div>
 
-        <!-- Minecraft -->
-        <div class="game-card bg-slate-800 rounded-xl border border-slate-700 p-6 hover:border-emerald-500/50">
-          <div class="flex items-center gap-4 mb-4">
-            <div class="text-4xl">⛏️</div>
-            <div>
-              <h3 class="text-xl font-bold text-emerald-400">Minecraft</h3>
-              <p class="text-sm text-slate-400">Navigate through the Minecraft Wiki</p>
-            </div>
-          </div>
-          <p class="text-slate-300 mb-6">
-            Explore the blocky universe of Minecraft. From crafting recipes to redstone 
-            mechanics, navigate through endless possibilities.
-          </p>
-          <a href="minecraft.html" class="inline-flex items-center gap-2 px-4 py-2 bg-emerald-500 hover:bg-emerald-600 text-white font-semibold rounded-lg transition-colors">
-            Play Minecraft Game
-            <span>→</span>
-          </a>
-        </div>
-
-        <!-- Terraria -->
-        <div class="game-card bg-slate-800 rounded-xl border border-slate-700 p-6 hover:border-amber-500/50">
-          <div class="flex items-center gap-4 mb-4">
-            <div class="text-4xl">🏗️</div>
-            <div>
-              <h3 class="text-xl font-bold text-amber-400">Terraria</h3>
-              <p class="text-sm text-slate-400">Navigate through the Terraria Wiki</p>
-            </div>
-          </div>
-          <p class="text-slate-300 mb-6">
-            Journey through the 2D sandbox world of Terraria. Discover items, bosses, 
-            and building techniques in this adventure-packed wiki.
-          </p>
-          <a href="terraria.html" class="inline-flex items-center gap-2 px-4 py-2 bg-amber-500 hover:bg-amber-600 text-white font-semibold rounded-lg transition-colors">
-            Play Terraria Game
-            <span>→</span>
-          </a>
-        </div>
-
-        <!-- Fandom -->
-        <div class="game-card bg-slate-800 rounded-xl border border-slate-700 p-6 hover:border-blue-500/50">
-          <div class="flex items-center gap-4 mb-4">
-            <div class="text-4xl">🌐</div>
-            <div>
-              <h3 class="text-xl font-bold text-blue-400">Fandom</h3>
-              <p class="text-sm text-slate-400">Navigate through Fandom Wikis</p>
-            </div>
-          </div>
-          <p class="text-slate-300 mb-6">
-            Explore the vast network of Fandom wikis. From movies to games, 
-            navigate through countless fandoms and communities.
-          </p>
-          <a href="fandom.html" class="inline-flex items-center gap-2 px-4 py-2 bg-blue-500 hover:bg-blue-600 text-white font-semibold rounded-lg transition-colors">
-            Play Fandom Game
-            <span>→</span>
-          </a>
-        </div>
-
         <!-- Wiki.gg -->
         <div class="game-card bg-slate-800 rounded-xl border border-slate-700 p-6 hover:border-purple-500/50">
           <div class="flex items-center gap-4 mb-4">
@@ -165,6 +108,44 @@
             Play Wiki.gg Game
             <span>→</span>
           </a>
+        </div>
+
+        <!-- Minecraft - Coming Soon -->
+        <div class="game-card bg-slate-800 rounded-xl border border-slate-700 p-6 opacity-75">
+          <div class="flex items-center gap-4 mb-4">
+            <div class="text-4xl">⛏️</div>
+            <div>
+              <h3 class="text-xl font-bold text-emerald-400">Minecraft</h3>
+              <p class="text-sm text-slate-400">Navigate through the Minecraft Wiki</p>
+            </div>
+          </div>
+          <p class="text-slate-300 mb-6">
+            Explore the blocky universe of Minecraft. From crafting recipes to redstone 
+            mechanics, navigate through endless possibilities.
+          </p>
+          <div class="inline-flex items-center gap-2 px-4 py-2 bg-slate-600 text-slate-400 font-semibold rounded-lg cursor-not-allowed">
+            Coming Soon
+            <span>⏳</span>
+          </div>
+        </div>
+
+        <!-- Fandom - Coming Soon -->
+        <div class="game-card bg-slate-800 rounded-xl border border-slate-700 p-6 opacity-75">
+          <div class="flex items-center gap-4 mb-4">
+            <div class="text-4xl">🌐</div>
+            <div>
+              <h3 class="text-xl font-bold text-blue-400">Fandom</h3>
+              <p class="text-sm text-slate-400">Navigate through Fandom Wikis</p>
+            </div>
+          </div>
+          <p class="text-slate-300 mb-6">
+            Explore the vast network of Fandom wikis. From movies to games, 
+            navigate through countless fandoms and communities.
+          </p>
+          <div class="inline-flex items-center gap-2 px-4 py-2 bg-slate-600 text-slate-400 font-semibold rounded-lg cursor-not-allowed">
+            Coming Soon
+            <span>⏳</span>
+          </div>
         </div>
       </div>
     </div>
@@ -247,44 +228,6 @@
       </div>
     </div>
   </main>
-
-  <script>
-    // Auto-insert header when page loads
-    document.addEventListener('DOMContentLoaded', function() {
-      // For the landing page, we'll create a simple header
-      const headerHTML = `
-        <header class="bg-slate-800 border-b border-slate-700 shadow-lg">
-          <div class="max-w-7xl mx-auto px-4 py-4">
-            <!-- Main Header Row -->
-            <div class="flex items-center justify-between">
-              <!-- Logo and Title -->
-              <div class="flex items-center space-x-3">
-                <div class="text-3xl">🎯</div>
-                <div>
-                  <h1 class="text-2xl font-bold text-white">WikiHop</h1>
-                  <p class="text-sm text-slate-400">Navigate from start to target using only wiki links</p>
-                </div>
-              </div>
-              
-              <!-- Home Badge -->
-              <div class="flex items-center space-x-2">
-                <span class="text-2xl">🏠</span>
-                <div class="text-right">
-                  <div class="text-lg font-semibold text-blue-400">Home</div>
-                  <div class="text-xs text-slate-400">Choose Your Game</div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </header>
-      `;
-      
-      // Insert at the beginning of the body
-      const body = document.body;
-      const tempDiv = document.createElement('div');
-      tempDiv.innerHTML = headerHTML;
-      body.insertBefore(tempDiv.firstElementChild, body.firstChild);
-    });
   </script>
 </body>
 </html>
