--- a/index.html
+++ b/index.html
@@ -62,10 +62,7 @@
               <p class="text-sm text-slate-400">Navigate through the OSRS Wiki</p>
             </div>
           </div>
-          <p class="text-slate-300 mb-6">
-            Explore the vast world of Gielinor through wiki pages. From quests to skills, 
-            find your way through the Old School RuneScape knowledge base.
-          </p>
+
           <a href="osrs.html" class="inline-flex items-center gap-2 px-4 py-2 bg-green-500 hover:bg-green-600 text-white font-semibold rounded-lg transition-colors">
             Play OSRS Game
             <span>→</span>
@@ -81,31 +78,57 @@
               <p class="text-sm text-slate-400">Navigate through the Path of Exile Wiki</p>
             </div>
           </div>
-          <p class="text-slate-300 mb-6">
-            Dive into the dark world of Wraeclast. Navigate through builds, items, 
-            and mechanics in this action RPG's comprehensive wiki.
-          </p>
+
           <a href="poe.html" class="inline-flex items-center gap-2 px-4 py-2 bg-orange-500 hover:bg-orange-600 text-white font-semibold rounded-lg transition-colors">
             Play PoE Game
             <span>→</span>
           </a>
         </div>
 
-        <!-- Wiki.gg -->
-        <div class="game-card bg-slate-800 rounded-xl border border-slate-700 p-6 hover:border-purple-500/50">
+        <!-- Warcraft -->
+        <div class="game-card bg-slate-800 rounded-xl border border-slate-700 p-6 hover:border-blue-500/50">
           <div class="flex items-center gap-4 mb-4">
-            <div class="text-4xl">🎮</div>
+            <div class="text-4xl">⚔️</div>
             <div>
-              <h3 class="text-xl font-bold text-purple-400">Wiki.gg</h3>
-              <p class="text-sm text-slate-400">Navigate through Wiki.gg</p>
+              <h3 class="text-xl font-bold text-blue-400">Warcraft</h3>
+              <p class="text-sm text-slate-400">Navigate through the Warcraft Wiki</p>
             </div>
           </div>
-          <p class="text-slate-300 mb-6">
-            Discover the modern wiki platform Wiki.gg. Navigate through 
-            game wikis and community-driven knowledge bases.
-          </p>
-          <a href="wiki-gg.html" class="inline-flex items-center gap-2 px-4 py-2 bg-purple-500 hover:bg-purple-600 text-white font-semibold rounded-lg transition-colors">
-            Play Wiki.gg Game
+
+          <a href="warcraft.html" class="inline-flex items-center gap-2 px-4 py-2 bg-blue-500 hover:bg-blue-600 text-white font-semibold rounded-lg transition-colors">
+            Play Warcraft Game
+            <span>→</span>
+          </a>
+        </div>
+
+        <!-- Cookie Clicker -->
+        <div class="game-card bg-slate-800 rounded-xl border border-slate-700 p-6 hover:border-amber-500/50">
+          <div class="flex items-center gap-4 mb-4">
+            <div class="text-4xl">🍪</div>
+            <div>
+              <h3 class="text-xl font-bold text-amber-400">Cookie Clicker</h3>
+              <p class="text-sm text-slate-400">Navigate through the Cookie Clicker Wiki</p>
+            </div>
+          </div>
+
+          <a href="cookie-clicker.html" class="inline-flex items-center gap-2 px-4 py-2 bg-amber-500 hover:bg-amber-600 text-white font-semibold rounded-lg transition-colors">
+            Play Cookie Clicker Game
+            <span>→</span>
+          </a>
+        </div>
+
+        <!-- Terraria -->
+        <div class="game-card bg-slate-800 rounded-xl border border-slate-700 p-6 hover:border-orange-500/50">
+          <div class="flex items-center gap-4 mb-4">
+            <div class="text-4xl">🏗️</div>
+            <div>
+              <h3 class="text-xl font-bold text-orange-400">Terraria</h3>
+              <p class="text-sm text-slate-400">Navigate through the Terraria Wiki</p>
+            </div>
+          </div>
+
+          <a href="terraria.html" class="inline-flex items-center gap-2 px-4 py-2 bg-orange-500 hover:bg-orange-600 text-white font-semibold rounded-lg transition-colors">
+            Play Terraria Game
             <span>→</span>
           </a>
         </div>
@@ -119,14 +142,11 @@
               <p class="text-sm text-slate-400">Navigate through the Minecraft Wiki</p>
             </div>
           </div>
-          <p class="text-slate-300 mb-6">
-            Explore the blocky universe of Minecraft. From crafting recipes to redstone 
-            mechanics, navigate through endless possibilities.
-          </p>
-          <div class="inline-flex items-center gap-2 px-4 py-2 bg-slate-600 text-slate-400 font-semibold rounded-lg cursor-not-allowed">
-            Coming Soon
-            <span>⏳</span>
-          </div>
+
+          <a href="minecraft.html" class="inline-flex items-center gap-2 px-4 py-2 bg-emerald-500 hover:bg-emerald-600 text-white font-semibold rounded-lg transition-colors">
+            Play Minecraft Game
+            <span>→</span>
+          </a>
         </div>
 
         <!-- Fandom - Coming Soon -->
@@ -138,10 +158,7 @@
               <p class="text-sm text-slate-400">Navigate through Fandom Wikis</p>
             </div>
           </div>
-          <p class="text-slate-300 mb-6">
-            Explore the vast network of Fandom wikis. From movies to games, 
-            navigate through countless fandoms and communities.
-          </p>
+
           <div class="inline-flex items-center gap-2 px-4 py-2 bg-slate-600 text-slate-400 font-semibold rounded-lg cursor-not-allowed">
             Coming Soon
             <span>⏳</span>
